// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel renders 1`] = `
<div
  className="sc-ibkoSk jfhBOs"
>
  <ul
    className="sc-keiIcO sc-laFCIP iwmlSR csfESm"
  >
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        0
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        1
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        2
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        3
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        4
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        5
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        6
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        7
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        8
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        9
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        10
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        11
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        12
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        13
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        14
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        15
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        16
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        17
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        18
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        19
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        20
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        21
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        22
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        23
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-bczRLJ dorCCS"
      >
        24
      </div>
    </li>
  </ul>
</div>
`;

exports[`Carousel renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="sc-ibkoSk jfhBOs"
  >
    <ul
      className="sc-keiIcO sc-laFCIP iwmlSR csfESm"
    >
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          24
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          23
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          22
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          21
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          20
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          19
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          18
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          17
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          16
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          15
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          14
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          13
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          12
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          11
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          10
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          9
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          8
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          7
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          6
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          5
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          4
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          3
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          2
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          1
        </div>
      </li>
      <li
        className="sc-iRaSfU jTZlXZ"
      >
        <div
          className="sc-gsnTZi imNOCE"
        >
          0
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Carousel renders visible index 1`] = `
<div
  className="sc-ibkoSk jfhBOs"
>
  <ul
    className="sc-keiIcO sc-laFCIP elUtjp csfESm"
  >
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-eCYdqJ cVytKw"
      >
        -1
        , 
        -1
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-eCYdqJ cVytKw"
      >
        -1
        , 
        -1
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-eCYdqJ cVytKw"
      >
        -1
        , 
        -1
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-eCYdqJ cVytKw"
      >
        -1
        , 
        -1
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-eCYdqJ cVytKw"
      >
        -1
        , 
        -1
      </div>
    </li>
  </ul>
</div>
`;

exports[`Carousel renders with Customized Arrows 1`] = `
<div
  className="sc-ibkoSk jfhBOs"
>
  <button
    disabled={true}
    onClick={[Function]}
  >
    Scroll to left
  </button>
  <ul
    className="sc-keiIcO sc-laFCIP iwmlSR csfESm"
  >
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        0
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        1
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        2
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        3
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        4
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        5
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        6
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        7
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        8
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        9
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        10
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        11
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        12
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        13
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        14
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        15
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        16
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        17
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        18
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        19
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        20
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        21
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        22
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        23
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-hKMtZM bfldDN"
      >
        24
      </div>
    </li>
  </ul>
  <button
    disabled={true}
    onClick={[Function]}
  >
    Scroll to Right
  </button>
</div>
`;

exports[`Carousel renders with different Space 1`] = `
<div
  className="sc-ibkoSk jfhBOs"
>
  <ul
    className="sc-keiIcO sc-laFCIP elUtjp csfESm"
  >
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-dkzDqf izqZwO"
      >
        0
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-dkzDqf izqZwO"
      >
        1
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-dkzDqf izqZwO"
      >
        2
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-dkzDqf izqZwO"
      >
        3
      </div>
    </li>
    <li
      className="sc-iRaSfU jTZlXZ"
    >
      <div
        className="sc-dkzDqf izqZwO"
      >
        4
      </div>
    </li>
  </ul>
</div>
`;
